Closed
Bug 1769832
Opened 3 years ago
Closed 3 years ago
Build error with `ac_add_options --disable-printing`: dom/ipc/BrowserChild.cpp:39:10: fatal error: 'mozilla/layout/RemotePrintJobChild.h' file not found
Categories
(Core :: Printing: Output, defect)
Core
Printing: Output
Tracking
()
RESOLVED
FIXED
102 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox100 | --- | unaffected |
| firefox101 | --- | unaffected |
| firefox102 | --- | fixed |
People
(Reporter: dholbert, Assigned: dholbert)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Recently-introduced build error, if you compile with ac_add_options --disable-printing:
dom/ipc/BrowserChild.cpp:39:10: fatal error: 'mozilla/layout/RemotePrintJobChild.h' file not found
#include "mozilla/layout/RemotePrintJobChild.h"
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Just needs an ifdef wrapper around that include statement.
| Assignee | ||
Updated•3 years ago
|
Summary: Build → Build error with `ac_add_options --disable-printing`: dom/ipc/BrowserChild.cpp:39:10: fatal error: 'mozilla/layout/RemotePrintJobChild.h' file not found
Updated•3 years ago
|
Keywords: regression
Comment 1•3 years ago
|
||
Set release status flags based on info from the regressing bug 1432651
status-firefox100:
--- → unaffected
status-firefox101:
--- → unaffected
status-firefox102:
--- → affected
status-firefox-esr91:
--- → unaffected
| Assignee | ||
Comment 2•3 years ago
|
||
Pushed by dholbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a193c9399ab4
Move a print-related #include to an ifdef-guarded section, to fix compile error with --disable-printing. r=jwatt
Comment 4•3 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
Updated•3 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•