Bug 1769832: Move a print-related #include to an ifdef-guarded section, to fix compile error with --disable-printing. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D146627